# docs/swagger.json
@@ -223,7 +223,7 @@
                 "tags": [
                     "Schedules"
                 ],
-                "summary": "Create schedule",
+                "summary": "Create schedules",
                 "parameters": [
                     {
                         "description": "Schedule times",
@@ -239,7 +239,10 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/models.Schedule"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.Schedule"
+                            }
                         }
                     }
                 }
@@ -419,12 +422,8 @@
                 "id": {
                     "type": "integer"
                 },
-                "time1": {
+                "scheduled_time": {
                     "description": "e.g. '08:00:00'",
-                    "type": "string"
-                },
-                "time2": {
-                    "description": "e.g. '20:00:00'",
                     "type": "string"
                 },
                 "user_id": {
